--- a/assets/css/my-custom-styling.scss
+++ b/assets/css/my-custom-styling.scss
@@ -14,6 +14,10 @@ p {
     line-height: 2rem;
 }
 
+h1,h2,h3,h4,h5,h6 {
+    font-family: 'Montserrat','Roboto', sans-serif;
+}
+
 h1 {
     font-size: 3rem;
     font-weight: 400;
@@ -68,6 +72,10 @@ h6 {
     li {
         margin-bottom: .75rem;
     }
+}
+
+.navbar-menu.is-active {
+    width: 80%;
 }
 
 .container.is-fluid {
